# helix-crypto

./: Cargo.toml
src/: codecs.rs  errors.rs  fileio.rs  helix.rs  lib.rs  main.rs  observer.rs  storage.rs  util.rs
src/cli/: capsule.rs  file.rs  mod.rs
src/crypto/: chacha.rs  mod.rs
src/filecrypto/: chacha.rs  mod.rs
src/fileio/: readers.rs  writers.rs
src/helix/: core.rs  errors.rs  files.rs  folder_walker.rs  master_key.rs  mod.rs
src/helix_crypto/: core.rs  files.rs  folder_walker.rs  master_key.rs  mod.rs
