[package]
name = "helix-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
hex = "0.4.3"
sqlite = "0.30.4"
json = "0.12.4"
bson = "2.6.1"
sha2 = "0.10.6"
